# backend

./: .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
.claude/skills/sumo-docs/: SKILL.md
dispatch-service/: Dockerfile  pyproject.toml
dispatch-service/app/: dispatch.py
dispatch-service/tests/: test_dispatch.py
docs/: PRD.md  project-proposal.md
scripts/: sync_all.bat
sumo_service/: Dockerfile  README.md  pyproject.toml
sumo_service/app/: connection_manager.py  main.py  simulation.py
sumo_service/app/routers/: simulation.py  ws.py
sumo_service/sumo_configs/gangnam/: LargeGangNamSimulation.sumocfg  LargeGangnamStationroute.rou.xml  LargeGangnamStationroute_1000.rou.xml  LargeGangnamStationroute_500.rou.xml  routes.rou.xml
sumo_service/tests/: test_connection_manager.py  test_simulation_router.py
