[project]
name = "dispatch-service"
version = "0.1.0"
description = "Supply-demand imbalance, incentive algorithm, and nearest-taxi dispatch"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
