[project]
name = "sumo-service"
version = "0.1.0"
description = "SUMO/TraCI simulation service with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "eclipse-sumo>=1.21.0",
    "traci>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # CLI thread reads stdin which pytest captures; the OSError is expected in tests.
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
